Implements HW_9